<resources>
    <string name="app_name">FitTrack</string>
    <string name="good_morning">Good Morning, %1$s</string>
    <string name="calories_remaining">Remaining</string>
    <string name="goal">Goal</string>
    <string name="food">Food</string>
    <string name="exercise">Exercise</string>
    <string name="carbs">Carbs</string>
    <string name="protein">Protein</string>
    <string name="fat">Fat</string>
    <string name="steps">Steps</string>
    <string name="steps_goal">/ 10,000 steps</string>
    <string name="calories_burned">%1$d kcal burned</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="snacks">Snacks</string>
    <string name="add_food">+</string>

    <string name="nav_home">Home</string>
    <string name="nav_diary">Diary</string>
    <string name="nav_search">Search</string>
    <string name="nav_progress">Progress</string>
    <string name="nav_profile">Profile</string>
</resources>